Add assets, link style.css, add metatags  and styled semantics

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Fit Lifestyle. Gym is Poznan, Poland. Morawskiego, fitness">
+    <meta name="keywords" content="exercise, meal preps, gym wokouts, home workouts.">
     <title>Fit Lifestyle</title>
-    <!-- Stylesheet -->
-    <!-- Favicon -->
+        <!-- Favicon -->
+        <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>Header</header>
