Push and stick foote to bottom of page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>Header</header>
     <nav>nav</nav>
-    <main>Main</main>
+    <main>Main-text</main>
     <footer>Footer</footer>
 </body>
 </html>
