--- a/index.html
+++ b/index.html
@@ -10,15 +10,55 @@
     <meta name="keywords" content="exercise, meal preps, gym wokouts, home workouts.">
     <title>Fit Lifestyle</title>
     <!-- Favicon -->
+    <link rel="icon" href="assets/favicon/favicon.png">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <header>Header</header>
-    <nav>nav</nav>
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="assets/favicon/favicon.png" alt="logo">
+            </a>
+            <a href="index.html">
+                <h1>Fit Lifestyle</h1>
+            </a>
+        </div>
+        
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="#">Workout Routines</a></li>
+                <li><a href="#">Meal Preps</a></li>
+                <li><a href="#">Sign Up</a></li>
+            </ul>
+        </nav>
+   
+    </header>
     <main>Main-text</main>
-    <footer>Footer</footer>
+
+    <footer>
+        <p>"If it doesn't challenge you, it doesn't change you." <strong>FRED_DEVITO</strong></p>
+        <section class="social-media">
+            <p>Follow Us</p>
+            <ul class="social-networks">
+                <li><a href="https://x.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li><a href="https://wwww.facebook.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our instagram page (opens in a new tab)"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
+            </ul>
+        </section>
+    </footer>
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/d4243b7aeb.js" crossorigin="anonymous"></script>
