--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!--Header-->
     <header>
         <div class="logo">
             <a href="index.html">
@@ -38,8 +39,11 @@
         </nav>
    
     </header>
+
+    <!--Main Content-->
     <main>Main-text</main>
 
+    <!--Footer-->
     <footer>
         <p>"If it doesn't challenge you, it doesn't change you." <strong>FRED_DEVITO</strong></p>
         <section class="social-media">
