--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <nav>
             <ul class="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="#">Workout Routines</a></li>
-                <li><a href="#">Meal Preps</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="workout-routines.html">Workout Routines</a></li>
+                <li><a href="meal-preps.html">Meal Preps</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
             </ul>
         </nav>
    
