Deleted jpeg images and replaced with webp images

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
     </header>
 
     <!--Main Content-->
-    <main>Main-text</main>
+    <main>
+        <section class="hero">
+
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
