Add hero image, hero text and styled both

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <!--Main Content-->
     <main>
         <section class="hero">
-
+            <div class="hero-text">
+                <h2>Having a healthy life is having a good life.</h2>
+            </div>
         </section>
     </main>
 
