Add motivation section to home page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1>Fit Lifestyle</h1>
             </a>
         </div>
-        
+
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
@@ -37,7 +37,7 @@
                 <li><a href="sign-up.html">Sign Up</a></li>
             </ul>
         </nav>
-   
+
     </header>
 
     <!--Main Content-->
@@ -46,6 +46,11 @@
             <div class="hero-text">
                 <h2>Having a healthy life is having a good life.</h2>
             </div>
+        </section>
+        <section class="motivation">
+            <h2>A beginner's guide to start working out.</h2>
+            <div class="workout-benefits"></div>
+            <div class="healthy-meals-benefits"></div>
         </section>
     </main>
 
