Add physical benefits div and it's contents

--- a/index.html
+++ b/index.html
@@ -49,7 +49,24 @@
         </section>
         <section class="motivation">
             <h2>A beginner's guide to start working out.</h2>
-            <div class="workout-benefits"></div>
+            <div class="workout-benefits">
+                <div class="physical-benefits">
+                    <h3>Physical Benefits</h3>
+                    <p>Regular exercise strengthens the heart and improves circulation, reducing the risk of heart
+                        disease and stroke.<br>Physical activity helps control weight by burning calories and building
+                        muscle mass.<br>Regular exercise is linked to a longer
+                        lifespan by reducing the risk of many chronic diseases.
+                    </p>
+                    <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells">
+                    <p>Strength training and resistance exercises enhance muscle strength, endurance,
+                        and overall body functionality.<br>Regular exercise can strengthen the immune system, helping
+                        the body fight off illnesses more effectively.<br>Exercise helps regulate blood sugar and
+                        insulin levels, reducing the risk of type 2 diabetes.
+                    </p>
+                    <img src="assets/images/woman_drinking_water_next_to_a_bike.webp" alt="woman drinking water next to a bike">
+                </div>
+                <div class="mental-benefits"></div>
+            </div>
             <div class="healthy-meals-benefits"></div>
         </section>
     </main>
