--- a/index.html
+++ b/index.html
@@ -58,14 +58,19 @@
                         lifespan by reducing the risk of many chronic diseases.
                     </p>
                     <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells">
-                    <p>Strength training and resistance exercises enhance muscle strength, endurance,
-                        and overall body functionality.<br>Regular exercise can strengthen the immune system, helping
-                        the body fight off illnesses more effectively.<br>Exercise helps regulate blood sugar and
-                        insulin levels, reducing the risk of type 2 diabetes.
-                    </p>
-                    <img src="assets/images/woman_drinking_water_next_to_a_bike.webp" alt="woman drinking water next to a bike">
                 </div>
-                <div class="mental-benefits"></div>
+                <div class="mental-benefits">
+                    <h3>Mental Benefits</h3>
+                    <p>Physical activity stimulates the production of endorphins, which are natural mood lifters,
+                        reducing stress and anxiety levels. <br> Exercise can help alleviate symptoms of depression and
+                        improve overall mood and well-being. <br>Achieving fitness goals and improving physical
+                        appearance can enhance self-esteem and confidence. <br>Physical activity helps develop mental
+                        toughness and resilience, which can be beneficial in dealing with life's challenges.
+
+                    </p>
+                    <img src="assets/images/woman_drinking_water_next_to_a_bike.webp"
+                        alt="woman drinking water next to a bike">
+                </div>
             </div>
             <div class="healthy-meals-benefits"></div>
         </section>
