Underline workout benefits and structured healthy meals benefits

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             </div>
         </section>
         <section class="motivation">
-            <h2>A beginner's guide to start working out.</h2>
+            <h2>A beginner's guide to start working out</h2>
             <div class="workout-benefits">
+                <h2>Workout benefits</h2>
+                <hr>
                 <div class="physical-benefits">
                     <h3>Physical Benefits</h3>
                     <p>Regular exercise strengthens the heart and improves circulation, reducing the risk of heart
@@ -59,6 +61,7 @@
                     </p>
                     <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells">
                 </div>
+                <hr>
                 <div class="mental-benefits">
                     <h3>Mental Benefits</h3>
                     <p>Physical activity stimulates the production of endorphins, which are natural mood lifters,
@@ -71,8 +74,14 @@
                     <img src="assets/images/woman_drinking_water_next_to_a_bike.webp"
                         alt="woman drinking water next to a bike">
                 </div>
+                <hr>
             </div>
-            <div class="healthy-meals-benefits"></div>
+            <div class="healthy-meals-benefits">
+                <h2>Benefits of healthy meals</h2>
+                <br>
+                <div class="hmb-physical"></div>
+                <div class="hmb-mental"></div>
+            </div>
         </section>
     </main>
 
