--- a/index.html
+++ b/index.html
@@ -54,23 +54,29 @@
                 <hr>
                 <div class="physical-benefits">
                     <h3>Physical Benefits</h3>
-                    <p>Regular exercise strengthens the heart and improves circulation, reducing the risk of heart
-                        disease and stroke.<br>Physical activity helps control weight by burning calories and building
-                        muscle mass.<br>Regular exercise is linked to a longer
-                        lifespan by reducing the risk of many chronic diseases.
-                    </p>
+                    <ul>
+                        <li>Regular exercise strengthens the heart and improves circulation, reducing the risk of heart
+                            disease and stroke.</li>
+                        <li>Physical activity helps control weight by burning calories and building
+                            muscle mass.</li>
+                        <li>Regular exercise is linked to a longer
+                            lifespan by reducing the risk of many chronic diseases.</li>
+                    </ul>
                     <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells">
                 </div>
                 <hr>
                 <div class="mental-benefits">
                     <h3>Mental Benefits</h3>
-                    <p>Physical activity stimulates the production of endorphins, which are natural mood lifters,
-                        reducing stress and anxiety levels. <br> Exercise can help alleviate symptoms of depression and
-                        improve overall mood and well-being. <br>Achieving fitness goals and improving physical
-                        appearance can enhance self-esteem and confidence. <br>Physical activity helps develop mental
-                        toughness and resilience, which can be beneficial in dealing with life's challenges.
-
-                    </p>
+                    <ul>
+                        <li>Physical activity stimulates the production of endorphins, which are natural mood lifters,
+                            reducing stress and anxiety levels.</li>
+                        <li>Exercise can help alleviate symptoms of depression and
+                            improve overall mood and well-being.</li>
+                        <li>Achieving fitness goals and improving physical
+                            appearance can enhance self-esteem and confidence.</li>
+                        <li>Physical activity helps develop mental
+                            toughness and resilience, which can be beneficial in dealing with life's challenges.</li>
+                    </ul>
                     <img src="assets/images/woman_drinking_water_next_to_a_bike.webp"
                         alt="woman drinking water next to a bike">
                 </div>
@@ -79,8 +85,18 @@
             <div class="healthy-meals-benefits">
                 <h2>Benefits of healthy meals</h2>
                 <br>
-                <div class="hmb-physical"></div>
-                <div class="hmb-mental"></div>
+                <div class="physical-benefits">
+                    <h3>Physical benefits</h3>
+                    <p></p>
+                    <img src="" alt="">
+                </div>
+                <hr>
+                <div class="mental-benefits">
+                    <h3>Mental benefits</h3>
+                    <p></p>
+                    <img src="" alt="">
+                </div>
+                <hr>
             </div>
         </section>
     </main>
