--- a/index.html
+++ b/index.html
@@ -87,14 +87,29 @@
                 <br>
                 <div class="physical-benefits">
                     <h3>Physical benefits</h3>
-                    <p></p>
-                    <img src="" alt="">
+                    <ul>
+                        <li>Improved Nutrition; Provides essential vitamins and minerals.Ensures a balanced intake of
+                            macronutrients (proteins, fats, carbohydrates).</li>
+                        <li>Weight Management; Helps maintain a healthy weight.
+                            Reduces the risk of obesity.</li>
+                        <li>Enhanced Immune Function; Lowers the risk of chronic diseases such as heart disease,
+                            diabetes, and cancer.
+                            Reduces blood pressure and cholesterol levels.</li>
+                    </ul>
+                    <img src="assets/images/bowl_of_salad.webp" alt="a bowl of salad">
                 </div>
                 <hr>
                 <div class="mental-benefits">
                     <h3>Mental benefits</h3>
-                    <p></p>
-                    <img src="" alt="">
+                    <ul>
+                        <li>Improved Mood; Stabilizes blood sugar levels, reducing mood swings.
+                            Increases the production of serotonin, the “feel-good” hormone.</li>
+                        <li>Reduced Stress and Anxiety; Provides nutrients that support the nervous system.
+                            Helps balance hormones and reduce stress levels.</li>
+                        <li>Better Cognitive Function; Supports brain health and improves memory and concentration.
+                            Reduces the risk of cognitive decline and dementia.</li>
+                    </ul>
+                    <img src="assets/images/lady_preparing_a_meal.webp" alt="a lady preparing a healthy meal">
                 </div>
                 <hr>
             </div>
