--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
             <h2>A beginner's guide to start working out</h2>
             <div class="workout-benefits">
                 <h2>Workout benefits</h2>
-                <hr>
                 <div class="physical-benefits">
                     <h3>Physical Benefits</h3>
                     <ul>
@@ -120,6 +119,7 @@
     <footer>
         <p>"If it doesn't challenge you, it doesn't change you." <strong>FRED_DEVITO</strong></p>
         <section class="social-media">
+            <h6>Hide</h6>
             <p>Follow Us</p>
             <ul class="social-networks">
                 <li><a href="https://x.com/" target="_blank" rel="noopener"
