Create main section and addroutine, Monday and Tuesday content

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -26,7 +26,7 @@
                 <h1>Fit Lifestyle</h1>
             </a>
         </div>
-        
+
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
@@ -37,11 +37,83 @@
                 <li><a href="sign-up.html">Sign Up</a></li>
             </ul>
         </nav>
-   
+
     </header>
 
     <!--Main Content-->
-    <main>Main-text</main>
+    <main>
+        <Section>
+            <div>
+                <h2>Effective weekly workout routine</h2>
+                <p>You'll want to find a well-balanced workout routine you can stick to to reap the benefits of physical
+                    activity.</p>
+                <br>
+                <p>The Centers for Disease Control and Prevention (CDC) advises at least 150 minutes of
+                    moderate-intensity physical activity per week, which is 30 minutes per day, five days per week. The
+                    CDC also recommends two days of muscle-strengthening activities.</p>
+                <br>
+                <p>Your workout routine depends on your goals, such as building muscle and gaining strength. Here's a
+                    sample weekly workout schedule by Jacklyn Romano, CPT, a certified physical therapist based in New
+                    Jersey, and Sharon Gam, PhD, a certified personal trainer and health coach, to help you figure out
+                    your goals and get started.</p>
+                <br>
+            </div>
+            <div class="weekdays">
+                <div>
+                    <h3>Monday:</h3>
+                    <h4>Cardio</h4>
+                    <p>Aim for at least 30 minutes of aerobic activity, such as biking, jogging, running, and walking.
+                        The CDC recommends that you aim for moderate intensity, meaning a heart rate between 64% and 76%
+                        of your maximum heart rate.You'll be able to hold a conversation while exercising. Vigorous
+                        intensity, in contrast, means that you can only say a few words without pausing.</p>
+                    <br>
+                    <p>A good rule of thumb for finding your maximum heart rate is subtracting your age from 220. Your
+                        maximum heart rate would be 175 beats per minute (bpm), for example, if you are 40. You'll aim
+                        for a heart rate between 112 bpm and 133 bpm.</p>
+                    <br>
+                    <p>Steady-state cardio (endurance workouts) improve the stamina of your heart and lungs and reduce
+                        the risk of diabetes, heart disease, and stroke. Your body learns to move oxygen and nutrients
+                        into your muscles more efficiently while transporting waste out.As a result, those exercises
+                        will become easier over time, so you'll want to</p>
+                    <br>
+                </div>
+                <div>
+                    <h3>Tuesday:</h3>
+                    <h4>Lower body</h4>
+                    <p>With four compound lifts, your first muscle-strengthening session of the week will target your
+                        lower body, including your hamstrings, glutes, and quads. Compound lifts are exercises that use
+                        multiple muscle groups. A deadlift, for example, works your lower body and your arm and core
+                        muscles.</p>
+                    <br>
+                    <p>Do 10 reps for three sets, with a minute of rest between each set, of the following exercises:
+                    </p>
+                    <br>
+                    <ul>
+                        <li><strong>Deadlifts:</strong> Place your feet shoulder-width apart, push your butt back, bend
+                            your knees
+                            slightly, and bend forward, keeping your back straight. Grasp a barbell or pair of dumbbells
+                            with your hands. Lift the weights by driving your hips forward while keeping your back flat.
+                            Slowly lower the weights back to the floor.</li> <br>
+                        <li><strong>Hip thrusts:</strong> Sit on the ground with your shoulders on a bench or stable chair behind you.
+                            Keep your feet planted on the ground, and then push your hips up. Squeeze your glutes until
+                            your knees are at a 90-degree angle. Lower your hips back to the ground.</li><br>
+                        <li><strong>Lunges:</strong> Stand in a split stance, so one foot is a few feet in front of the other. Keep your
+                            torso straight, and then bend your knees until your back knee is a few inches from the floor
+                            and your front thigh is parallel to the floor. Push through your heels to return to the
+                            starting position. Repeat this move on the opposite sides.</li><br>
+                        <li><strong>Squats:</strong> Lower yourself like you are sitting in a chair. Keep your feet shoulder-width apart
+                            and your feet flat on the floor. Push back up to standing.</li>
+                    </ul>
+                    <br>
+                </div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </Section>
+    </main>
 
     <!--Footer-->
     <footer>
