Add Wednesday and Thursday workout routines

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -94,20 +94,58 @@
                             slightly, and bend forward, keeping your back straight. Grasp a barbell or pair of dumbbells
                             with your hands. Lift the weights by driving your hips forward while keeping your back flat.
                             Slowly lower the weights back to the floor.</li> <br>
-                        <li><strong>Hip thrusts:</strong> Sit on the ground with your shoulders on a bench or stable chair behind you.
+                        <li><strong>Hip thrusts:</strong> Sit on the ground with your shoulders on a bench or stable
+                            chair behind you.
                             Keep your feet planted on the ground, and then push your hips up. Squeeze your glutes until
                             your knees are at a 90-degree angle. Lower your hips back to the ground.</li><br>
-                        <li><strong>Lunges:</strong> Stand in a split stance, so one foot is a few feet in front of the other. Keep your
+                        <li><strong>Lunges:</strong> Stand in a split stance, so one foot is a few feet in front of the
+                            other. Keep your
                             torso straight, and then bend your knees until your back knee is a few inches from the floor
                             and your front thigh is parallel to the floor. Push through your heels to return to the
                             starting position. Repeat this move on the opposite sides.</li><br>
-                        <li><strong>Squats:</strong> Lower yourself like you are sitting in a chair. Keep your feet shoulder-width apart
+                        <li><strong>Squats:</strong> Lower yourself like you are sitting in a chair. Keep your feet
+                            shoulder-width apart
                             and your feet flat on the floor. Push back up to standing.</li>
                     </ul>
                     <br>
                 </div>
-                <div></div>
-                <div></div>
+                <div>
+                    <h3>Wednesday:</h3>
+                    <h4>Upper Body and Core</h4>
+                    <p>Your legs, which are likely feeling sore, will get a break since you'll be focusing on your arms
+                        today. You'll target your biceps, triceps, and chest muscles with these moves:</p>
+                    <br>
+                    <ul>
+                        <li><strong>Bicep curl: </strong> Hold a dumbbell in each hand or grasp a barbell with both
+                            hands. Let your elbows rest at your sides with your forearms extended out parallel to the
+                            floor. Bend your elbows to bring the weight to your shoulders and then return to the start
+                            position.</li> <br>
+                        <li><strong>Chest press: </strong> Lie back on a bench with your feet flat on the floor, holding
+                            a dumbbell in each hand or a barbell in both. Keep your arms perpendicular to your body and
+                            palms facing forward. Extend your elbows, pushing the weight up. Lower the weight to return
+                            to the starting position.</li><br>
+                        <li><strong>Tricep dip: </strong> Sit on a chair or bench and then grip the edge next to your
+                            hips. Slide your butt off the chair and lower yourself so your elbows are bent at a 45- or
+                            90-degree angle. Push yourself back to the starting position.</li><br>
+                    </ul>
+                    <p>Perform 10 reps of each exercise for three sets with one minute of rest in between each set.
+                        Finish this session with a quick core circuit. Pick some of your core moves—such as crunches,
+                        planks, and Russian twists—and do each one for 30 seconds with 10–15 seconds off. Repeat the
+                        exercises until you hit 10–15 minutes.</p>
+                    <br>
+                </div>
+                <div>
+                    <h3>Thursday:</h3>
+                    <h4>Active Rest anf Recovery</h4>
+                    <p>Give your body a chance to recover and recharge. Muscle-strengthening activities create tiny
+                        microtears in your muscle fibers, leaving your muscles achy and sore. That may sound alarming,
+                        but it actually means your muscles will grow back stronger than before. Not allowing your
+                        muscles to recover heightens your injury risk and prevents your muscles from strengthening.</p>
+                    <br>
+                    <p>You may get some form of movement in, even on off days, if you are not too sore or tired. Active
+                        rest might include walking and stretching, which relieves post-workout muscle tightness.</p>
+                    <br>
+                </div>
                 <div></div>
                 <div></div>
                 <div></div>
