Add workout routines for Friday, Saturday and Sunday

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -146,9 +146,63 @@
                         rest might include walking and stretching, which relieves post-workout muscle tightness.</p>
                     <br>
                 </div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>
+                    <h3>Friday:</h3>
+                    <h4>Lower Body With a Focus on Glutes</h4>
+                    <p>This lower body session will focus on your glutes. Warm up your glutes with five resistance band
+                        exercises, such as bridges, clamshells, and squats, for three rounds.</p>
+                    <br>
+                    <p>You'll move on to weighted exercises once you activate your glutes. Romano recommended doing 10
+                        reps for three sets of hinge movements, including deadlifts, hip thrusts, and single-legged hip
+                        thrusts. Those exercises target your glutes and hamstrings.</p>
+                    <br>
+                </div>
+                <div>
+                    <h3>Saturday:</h3>
+                    <h4>Upper Body</h4>
+                    <p>Focus on your back and shoulders for your final workout of the week. You'll want to fire up your
+                        muscles before jumping into the weights. Try doing three sets of 10 reps each of push-ups and
+                        pull-ups. You can modify with incline push-ups and assisted pull-ups until you build more
+                        strength.</p>
+                    <br>
+                    <p>You'll then complete five weighted exercises for 10 reps and three sets. Those exercises include:
+                    </p>
+                    <br>
+                    <ul>
+                        <li><strong>Dumbbell single-arm row: </strong> Place one hand under your shoulder, arm straight,
+                            on a bench. Rest your corresponding knee on the bench, keeping your other leg out to the
+                            side and your foot flat on the floor. Hold a dumbbell in your other hand, rowing your elbow
+                            up to your side until it's parallel to the floor. Lower and repeat on the other side.</li>
+                        <br>
+                        <li><strong>Lat pull down:</strong> Grab the bar of a cable machine with your palms facing away
+                            and shoulder-width apart. Make sure you are seated on a bench or kneeling on the floor. Pull
+                            the bar down to your chest before returning slowly to the starting position.</li><br>
+                        <li><strong>Lateral raise:</strong> Standing or sitting with a dumbbell in each hand and arms at
+                            your sides, engage your core and slowly lift the weights out to the side until your arms are
+                            parallel to the floor. Slowly return to the starting position.</li><br>
+                        <li><strong>Reverse fly:</strong> With your feet shoulder-width apart, bend slightly at your
+                            waist, holding a dumbbell in each hand. Raise both arms out to the side, squeezing your
+                            shoulder blades together. Return to the starting position.</li><br>
+                        <li>
+                            <strong>Shoulder press: </strong> Either seated or standing, hold a dumbbell in each hand at
+                            shoulder height. Keep your palms facing away and elbows bent at a 90-degree angle. Press the
+                            weights up until your arms are straight and the weights touch overhead. Slowly lower to the
+                            starting position.
+                        </li>
+                    </ul>
+                    <br>
+                </div>
+                <div>
+                    <h3>Sunday:</h3>
+                    <h4>Rest and Recovery Day</h4>
+                    <p>Celebrate your week of hard work by giving your body time to recover. You can try yoga or
+                        stretching to prevent your muscles from getting too stiff and sore.</p>
+                    <br>
+                    <p>It's OK to take a complete rest day, too. Both active and relaxed days off have a place in our
+                        weekly routine, whether that's reading a book on the couch or catching up on Netflix. What
+                        matters most is that you listen to your body.</p>
+                    <br>
+                </div>
             </div>
         </Section>
     </main>
