Hid ul decoration for home and workout page

--- a/meal-preps.html
+++ b/meal-preps.html
@@ -41,7 +41,14 @@
     </header>
 
     <!--Main Content-->
-    <main>Main-text</main>
+    <main>
+        <section>
+            <div>
+                <h1>Text</h1>
+            </div>
+        </section>
+        <h1>red text</h1>
+    </main>
 
     <!--Footer-->
     <footer>
