--- a/workout-routines.html
+++ b/workout-routines.html
@@ -42,7 +42,7 @@
 
     <!--Main Content-->
     <main>
-        <Section>
+        <Section class="workout-routines">
             <div>
                 <h2>Effective weekly workout routine</h2>
                 <p>You'll want to find a well-balanced workout routine you can stick to to reap the benefits of physical
