Create and add video file and videos

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -108,6 +108,7 @@
                             shoulder-width apart
                             and your feet flat on the floor. Push back up to standing.</li>
                     </ul>
+                    <video src=""></video>
                     <br>
                 </div>
                 <hr>
