Add Tuesday workout routine videos and styled for smaller phone screens

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -94,22 +94,34 @@
                             your knees
                             slightly, and bend forward, keeping your back straight. Grasp a barbell or pair of dumbbells
                             with your hands. Lift the weights by driving your hips forward while keeping your back flat.
-                            Slowly lower the weights back to the floor.</li> <br>
+                            Slowly lower the weights back to the floor.</li> <video
+                            src="assets/videos/Tuesday/deadlift.mp4" controls autoplay muted loop>
+                            <p>Your browser doesn't support HTML5 video.</p>
+                        </video><br>
                         <li><strong>Hip thrusts:</strong> Sit on the ground with your shoulders on a bench or stable
                             chair behind you.
                             Keep your feet planted on the ground, and then push your hips up. Squeeze your glutes until
-                            your knees are at a 90-degree angle. Lower your hips back to the ground.</li><br>
+                            your knees are at a 90-degree angle. Lower your hips back to the ground.</li>
+                            <video src="assets/videos/Tuesday/hip thrusts.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <br>
                         <li><strong>Lunges:</strong> Stand in a split stance, so one foot is a few feet in front of the
                             other. Keep your
                             torso straight, and then bend your knees until your back knee is a few inches from the floor
                             and your front thigh is parallel to the floor. Push through your heels to return to the
-                            starting position. Repeat this move on the opposite sides.</li><br>
+                            starting position. Repeat this move on the opposite sides.</li>
+                            <video src="assets/videos/Tuesday/lunges.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <br>
                         <li><strong>Squats:</strong> Lower yourself like you are sitting in a chair. Keep your feet
                             shoulder-width apart
                             and your feet flat on the floor. Push back up to standing.</li>
-                    </ul>
-                    <video src=""></video>
-                    <br>
+                            <video src="assets/videos/Tuesday/squats.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                    </ul><br>
                 </div>
                 <hr>
                 <div>
