Add videos on all workout days

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -134,14 +134,23 @@
                         <li><strong>Bicep curl: </strong> Hold a dumbbell in each hand or grasp a barbell with both
                             hands. Let your elbows rest at your sides with your forearms extended out parallel to the
                             floor. Bend your elbows to bring the weight to your shoulders and then return to the start
-                            position.</li> <br>
+                            position.</li>
+                            <video src="assets/videos/Wednesday/bicep curl.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p></video>
+                            <br>
                         <li><strong>Chest press: </strong> Lie back on a bench with your feet flat on the floor, holding
                             a dumbbell in each hand or a barbell in both. Keep your arms perpendicular to your body and
                             palms facing forward. Extend your elbows, pushing the weight up. Lower the weight to return
-                            to the starting position.</li><br>
+                            to the starting position.</li>
+                            <video src="assets/videos/Wednesday/chest press.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p></video>
+                            <br>
                         <li><strong>Tricep dip: </strong> Sit on a chair or bench and then grip the edge next to your
                             hips. Slide your butt off the chair and lower yourself so your elbows are bent at a 45- or
-                            90-degree angle. Push yourself back to the starting position.</li><br>
+                            90-degree angle. Push yourself back to the starting position.</li>
+                            <video src="assets/videos/Wednesday/tricep dip.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p></video>
+                            <br>
                     </ul>
                     <p>Perform 10 reps of each exercise for three sets with one minute of rest in between each set.
                         Finish this session with a quick core circuit. Pick some of your core moves—such as crunches,
@@ -191,13 +200,21 @@
                             on a bench. Rest your corresponding knee on the bench, keeping your other leg out to the
                             side and your foot flat on the floor. Hold a dumbbell in your other hand, rowing your elbow
                             up to your side until it's parallel to the floor. Lower and repeat on the other side.</li>
+                            <video src="assets/videos/Saturday/dumbbell single arm row.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p></video>
                         <br>
                         <li><strong>Lat pull down:</strong> Grab the bar of a cable machine with your palms facing away
                             and shoulder-width apart. Make sure you are seated on a bench or kneeling on the floor. Pull
-                            the bar down to your chest before returning slowly to the starting position.</li><br>
+                            the bar down to your chest before returning slowly to the starting position.</li>
+                            <video src="assets/videos/Saturday/lat pull down.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p></video>
+                            <br>
                         <li><strong>Lateral raise:</strong> Standing or sitting with a dumbbell in each hand and arms at
                             your sides, engage your core and slowly lift the weights out to the side until your arms are
-                            parallel to the floor. Slowly return to the starting position.</li><br>
+                            parallel to the floor. Slowly return to the starting position.</li>
+                            <video src="assets/videos/Saturday/lateral raise.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p></video>
+                            <br>
                         <li><strong>Reverse fly:</strong> With your feet shoulder-width apart, bend slightly at your
                             waist, holding a dumbbell in each hand. Raise both arms out to the side, squeezing your
                             shoulder blades together. Return to the starting position.</li><br>
