Add meal prep table with 7 days healthy meals

--- a/meal-preps.html
+++ b/meal-preps.html
@@ -26,28 +26,106 @@
                 <h1>Fit Lifestyle</h1>
             </a>
         </div>
-        
+
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul class="menu">
-                <li><a href="index.html" >Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="workout-routines.html">Workout Routines</a></li>
                 <li><a href="meal-preps.html" class="active">Meal Preps</a></li>
                 <li><a href="sign-up.html">Sign Up</a></li>
             </ul>
         </nav>
-   
+
     </header>
 
     <!--Main Content-->
     <main>
-        <section>
-            <div>
-                <h1>Text</h1>
-            </div>
+        <section class="meal-preps">
+            <section>
+                <h2>7 days of healthy meals on a budget</h2><br>
+                <p>Eating well is an important part of a healthy lifestyle. Consuming a balanced mix of nutritious foods
+                    can help your body feel its best. Aim for a mix of whole fruits and veggies, grains, proteins, fats,
+                    and oils from foods you enjoy.</p><br>
+                <p>Planning your meals in advance can help you to make healthier choices, save money and reduce waste.
+                    We’ve planned a week of meals that will give you a balanced, heart-healthy diet whilst helping you
+                    to control your spending. Amounts given are per person.</p><br>
+            </section>
+            <section>
+                <table>
+                    <caption>8 Healthy and Effective Diets</caption>
+
+                    <tr>
+                        <th>Day</th>
+                        <th>Breatfast</th>
+                        <th>Lunch</th>
+                        <th>Evening Meal</th>
+                        <th>Snacks</th>
+                    </tr>
+                    <tr>
+                        <td>Monday</td>
+                        <td>Porridge made with skimmed milk and one sliced banana on top.</td>
+                        <td>Lentil and vegetable soup, tinned or try our easy carrot and parsnip soup recipe (pictured);
+                            two slices of wholemeal bread with spread (spreads based on vegetable, olive or sunflower
+                            oil will be unsaturated so a better choice for your heart than butter).</td>
+                        <td>One medium-sized jacket potato (cooked in the microwave or oven) with a tin of sardines in
+                            tomato sauce, served with peas. </td>
+                        <td>Two satsumas (or easy-peelers); one apple; a small handful of unsalted peanuts (30g); a
+                            serving (125g) of fat-free Greek-style yoghurt.</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>Two slices of wholegrain toast with spread, one boiled egg and a sliced medium tomato.</td>
+                        <td>Our carrot and parsnip soup (use leftovers if you made Monday’s recipe, or make fresh with
+                            extra portions to freeze); two slices of wholemeal bread with spread.</td>
+                        <td>Homemade chunky vegetable and bean goulash (pictured); brown rice; broccoli. Get our goulash
+                            recipe.</td>
+                        <td>Three oatcakes with low-fat cream cheese or quark; one pear.</td>
+                    </tr>
+                    <tr>
+                        <td>Wednesday</td>
+                        <td>No-added-sugar muesli with skimmed milk, topped with one sliced banana. </td>
+                        <td>Jacket potato with half a can of reduced-sugar-and-salt baked beans; a portion of salad.
+                        </td>
+                        <td>Beetroot barley risotto (pictured); served with peas.</td>
+                        <td>One carrot cut into sticks; a small handful of unsalted peanuts; two satsumas.</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>Two slices of wholegrain toast with spread, sliced or mashed banana, and a serving of
+                            fat-free Greek-style yoghurt.</td>
+                        <td>Egg, tomato and cucumber wholemeal bread sandwich.</td>
+                        <td>Wholewheat spaghetti with sardines and cherry tomatoes; a portion of salad.</td>
+                        <td>Two plums; two oatcakes with spread; one pear.</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>No-added-sugar muesli with skimmed milk and a banana.</td>
+                        <td>Cheese salad sandwich made with reduced-fat Cheddar, salad, two slices of wholegrain bread
+                            and spread.</td>
+                        <td>Homemade mushroom and cauliflower frittata, served with peas and carrots or any other
+                            leftover/surplus vegetables. Get our frittata recipe.</td>
+                        <td>Two plums; two oatcakes with spread; one pear.</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td>Porridge made with skimmed milk; one banana.</td>
+                        <td>Vegetable soup, tinned or try our delicious recipe for mixed vegetable and bean soup.</td>
+                        <td>Homemade tuna and sweetcorn pasta bake, served with cauliflower and broccoli. </td>
+                        <td>Small handful of unsalted peanuts, one apple, one pear..</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>Poached egg and a portion of cooked mushrooms, with two slices of wholemeal bread.</td>
+                        <td>Chicken and vegetable traybake (pictured); baked apple with spiced sultanas and low-fat
+                            custard or homemade custard with low-fat milk.</td>
+                        <td>Chicken, cucumber and tomato wholemeal bread sandwiches (using leftovers from the lunchtime traybake).</td>
+                        <td>Small handful of unsalted peanuts; one carrot cut into sticks; two satsumas (or easy-peelers).</td>
+                    </tr>
+                </table>
+            </section>
         </section>
-        <h1>red text</h1>
     </main>
 
     <!--Footer-->
