Add basic styles to meal prep table

--- a/meal-preps.html
+++ b/meal-preps.html
@@ -52,7 +52,7 @@
                     We’ve planned a week of meals that will give you a balanced, heart-healthy diet whilst helping you
                     to control your spending. Amounts given are per person.</p><br>
             </section>
-            <section>
+            <section class="meal-prep-table">
                 <table>
                     <caption>8 Healthy and Effective Diets</caption>
 
