--- a/sign-up.html
+++ b/sign-up.html
@@ -41,7 +41,19 @@
     </header>
 
     <!--Main Content-->
-    <main>Main-text</main>
+    <main>
+        <section class="signup-page">
+            <form action="sign-up.html" method="GET" class="signup-form">
+                <h2>Gym Membership Form</h2>
+                <h3>Start your Fit Lifestyle today!</h3>
+                <p><strong>Note:</strong> It is totally free to be a member.</p>
+                <br>
+                <br>
+                <label for="first-name">First Name</label>
+                <input type="text" name="first-name" placeholder="Enter your First name" id="first-name" required>
+            </form>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
